modified:   XMLTools.sln 	modified:   XMLTools.vcxproj 	new file:   pretty/pretty/Resource.h 	new file:   pretty/pretty/pretty.cpp 	new file:   pretty/pretty/pretty.h 	new file:   pretty/pretty/pretty.rc 	new file:   pretty/pretty/pretty.vcxproj 	new file:   pretty/pretty/prettyDlg.cpp 	new file:   pretty/pretty/prettyDlg.h 	new file:   pretty/pretty/res/pretty.ico 	new file:   pretty/pretty/res/pretty.rc2 	new file:   pretty/pretty/stdafx.cpp 	new file:   pretty/pretty/stdafx.h 	new file:   pretty/pretty/targetver.h 	new file:   x64/Debug/install_pretty.reg

--- a/XMLTools.vcxproj
+++ b/XMLTools.vcxproj
@@ -309,6 +309,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AboutBoxDlg.cpp" />
+    <ClCompile Include="core.cpp" />
     <ClCompile Include="DebugDlg.cpp" />
     <ClCompile Include="LoadLibrary.cpp" />
     <ClCompile Include="OptionsDlg.cpp" />
