--- a/XMLTools.vcxproj.filters
+++ b/XMLTools.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="DebugDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="XMLTools.def">
